--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -21,4 +21,4 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           OPENAI_API_MODEL: "gpt-4"
-          BOT_NAME: "🤖 Code Review Bot"
+          BOT_NAME: "Code Review Bot"
