--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ inputs:
   BOT_NAME:
     description: "Name of the bot that will appear in comments"
     required: false
-    default: "🤖 Code Review Bot"
+    default: "Code Review Bot"
 
   exclude:
     description: "Glob patterns to exclude files from the diff analysis (comma-separated)"
