--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "kiri-code-reviewer",
+  "name": "Intellizzer",
   "version": "1.0.0",
-  "description": "Open AI powered code reviews",
+  "description": "AI powered code reviews",
   "main": "lib/main.js",
-  "author": "Ville Saukkonen",
+  "author": "Blizzer",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
